# tss

./: .gitignore
tcm_tss/: AUTHORS  Doxyfile  Makefile  Makefile.am  aclocal.m4  aminclude_static.am  arm_make.sh  build_make.sh  build_x86_mock.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  libtool  libutil-io.la  libutil.la  src_vars.mk  tpm2-tss-fapi.conf  vtpcm_readme.txt
tcm_tss/.libs/: libutil-io.la
tcm_tss/autom4te.cache/: output.2  output.3  requests  traces.0  traces.2  traces.3
tcm_tss/include/tss2/: tss2_tcti_secmodule.h
tcm_tss/lib/: tss2-fapi.pc  tss2-sys.pc  tss2-tcti-device.pc  tss2-tcti-i2c-ftdi.pc  tss2-tcti-libtpms.pc  tss2-tcti-secmodule.def  tss2-tcti-secmodule.map  tss2-tcti-secmodule.pc.in  tss2-tcti-spi-ftdi.pc  tss2-tcti-spi-ltt2go.pc  tss2-tcti-spidev.pc  tss2-tctildr.pc
tcm_tss/src/util-io/: io.lo
test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt-arm  Makefile  clean_and_build.sh  cmake_install.cmake  test_tss  test_tss.c
x86_mock_out/lib/: libtss2-esys.la  libtss2-fapi.so.1.0.0  libtss2-mu.so.0.0.1  libtss2-policy.so.0.0.0  libtss2-rc.la  libtss2-rc.so.0.0.0  libtss2-sys.la  libtss2-sys.so.1.0.1  libtss2-tcti-cmd.so.0.0.0  libtss2-tcti-device.so.0.0.0  libtss2-tcti-i2c-helper.so.0.0.0  libtss2-tcti-mssim.la  libtss2-tcti-mssim.so.0.0.0  libtss2-tcti-pcap.so.0.0.0  libtss2-tcti-secmodule.la  libtss2-tcti-secmodule.so.0.0.0  libtss2-tcti-spi-helper.so.0.0.0  libtss2-tcti-spidev.so.0.0.0  libtss2-tcti-swtpm.la  libtss2-tcti-swtpm.so.0.0.0  libtss2-tctildr.la  libtss2-tctildr.so.0.0.0
(+859 files in other folders)
